// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`00: empty inputs 1`] = `
Object {
  "input": "",
  "tokens": Array [],
}
`;

exports[`00: empty inputs 2`] = `
Object {
  "input": "[r][n]",
  "tokens": Array [
    Array [
      "NewLine",
      "[r][n]",
    ],
  ],
}
`;

exports[`01: white space tokens 1`] = `
Object {
  "input": " [t] abc   [r][n]def  [n]  ghi[n][r]  ",
  "tokens": Array [
    Array [
      "Spaces",
      " [t] ",
    ],
    Array [
      "Text",
      "abc",
    ],
    Array [
      "Spaces",
      "   ",
    ],
    Array [
      "NewLine",
      "[r][n]",
    ],
    Array [
      "Text",
      "def",
    ],
    Array [
      "Spaces",
      "  ",
    ],
    Array [
      "NewLine",
      "[n]",
    ],
    Array [
      "Spaces",
      "  ",
    ],
    Array [
      "Text",
      "ghi",
    ],
    Array [
      "NewLine",
      "[n]",
    ],
    Array [
      "NewLine",
      "[r]",
    ],
    Array [
      "Spaces",
      "  ",
    ],
  ],
}
`;

exports[`02: text with escapes 1`] = `
Object {
  "input": " ab+56[b]>qrst(abc[b]))",
  "tokens": Array [
    Array [
      "Spaces",
      " ",
    ],
    Array [
      "Text",
      "ab",
    ],
    Array [
      "Other",
      "+",
    ],
    Array [
      "Text",
      "56>qrst",
    ],
    Array [
      "Other",
      "(",
    ],
    Array [
      "Text",
      "abc)",
    ],
    Array [
      "Other",
      ")",
    ],
  ],
}
`;

exports[`03: The && operator 1`] = `
Object {
  "input": "&&abc&&cde&&",
  "tokens": Array [
    Array [
      "AndIf",
      "&&",
    ],
    Array [
      "Text",
      "abc",
    ],
    Array [
      "AndIf",
      "&&",
    ],
    Array [
      "Text",
      "cde",
    ],
    Array [
      "AndIf",
      "&&",
    ],
  ],
}
`;

exports[`03: The && operator 2`] = `
Object {
  "input": "a&b",
  "tokens": Array [
    Array [
      "Text",
      "a",
    ],
    Array [
      "Other",
      "&",
    ],
    Array [
      "Text",
      "b",
    ],
  ],
}
`;

exports[`03: The && operator 3`] = `
Object {
  "input": "&&",
  "tokens": Array [
    Array [
      "AndIf",
      "&&",
    ],
  ],
}
`;

exports[`03: The && operator 4`] = `
Object {
  "input": "&",
  "tokens": Array [
    Array [
      "Other",
      "&",
    ],
  ],
}
`;

exports[`04: dollar variables 1`] = `
Object {
  "input": "$abc123.456",
  "tokens": Array [
    Array [
      "DollarVariable",
      "abc123",
    ],
    Array [
      "Other",
      ".",
    ],
    Array [
      "Text",
      "456",
    ],
  ],
}
`;

exports[`04: dollar variables 2`] = `
Object {
  "input": "$ab$_90",
  "tokens": Array [
    Array [
      "DollarVariable",
      "ab",
    ],
    Array [
      "DollarVariable",
      "_90",
    ],
  ],
}
`;
